// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedGallery should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FeaturedGallery
    items={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <UNDEFINED>
          [Function]
        </UNDEFINED>,
        <JSXStyle
          css={
            Array [
              "@media screen and (min-width: 768px){.root.jsx-3345557127{background:url(https://vega.slooh.com/assets/v4/common/Dark_Pattern_Featured_LargeCanvas.png);}}",
            ]
          }
          styleId="3345557127"
        />,
      ],
      "className": "jsx-3345557127 root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": [Function],
        },
        "ref": null,
        "rendered": [Function],
        "type": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_changedBits": 0,
          "_changedBits2": 0,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": undefined,
          "_currentValue2": undefined,
          "_defaultValue": undefined,
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            "@media screen and (min-width: 768px){.root.jsx-3345557127{background:url(https://vega.slooh.com/assets/v4/common/Dark_Pattern_Featured_LargeCanvas.png);}}",
          ],
          "styleId": "3345557127",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <UNDEFINED>
            [Function]
          </UNDEFINED>,
          <JSXStyle
            css={
              Array [
                "@media screen and (min-width: 768px){.root.jsx-3345557127{background:url(https://vega.slooh.com/assets/v4/common/Dark_Pattern_Featured_LargeCanvas.png);}}",
              ]
            }
            styleId="3345557127"
          />,
        ],
        "className": "jsx-3345557127 root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": [Function],
          },
          "ref": null,
          "rendered": [Function],
          "type": Object {
            "$$typeof": Symbol(react.context),
            "Consumer": [Circular],
            "Provider": Object {
              "$$typeof": Symbol(react.provider),
              "_context": [Circular],
            },
            "_calculateChangedBits": null,
            "_changedBits": 0,
            "_changedBits2": 0,
            "_currentRenderer": null,
            "_currentRenderer2": null,
            "_currentValue": undefined,
            "_currentValue2": undefined,
            "_defaultValue": undefined,
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              "@media screen and (min-width: 768px){.root.jsx-3345557127{background:url(https://vega.slooh.com/assets/v4/common/Dark_Pattern_Featured_LargeCanvas.png);}}",
            ],
            "styleId": "3345557127",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`GuideBodyContent should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GuideBodyContent
    content="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    title=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h4
          className="jsx-3529671003 title"
        >
          
        </h4>,
        <p
          className="jsx-3529671003"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>,
        <JSXStyle
          css={
            Array [
              ".root.jsx-3529671003{color:#415671;font-family:brandon-grotesque, sans-serif;padding:0 35px;padding-bottom:35px;}",
              ".title.jsx-3529671003{margin:0;padding:26px 0;text-transform:uppercase;font-size:12px;-webkit-letter-spacing:2px;-moz-letter-spacing:2px;-ms-letter-spacing:2px;letter-spacing:2px;}",
              "p.jsx-3529671003{color:#6e7b8c;margin:0;padding:0;margin-bottom:32px;font-family:adobe-garamond-pro, serif;font-size:18px;line-height:1.75;}",
              "@media screen and (min-width: 768px){.root.jsx-3529671003{padding:0 55px;padding-bottom:55px;margin-top:-20px;}.title.jsx-3529671003{padding-top:60px;padding-bottom:30px;}}",
              "@media screen and (min-width: 1024px){.root.jsx-3529671003{padding:0 75px;padding-bottom:75px;}}",
              "@media screen and (min-width: 1366px){.root.jsx-3529671003{padding:0 95px;padding-bottom:95px;}}",
            ]
          }
          styleId="3529671003"
        />,
      ],
      "className": "jsx-3529671003 root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "",
          "className": "jsx-3529671003 title",
        },
        "ref": null,
        "rendered": "",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
          "className": "jsx-3529671003",
        },
        "ref": null,
        "rendered": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".root.jsx-3529671003{color:#415671;font-family:brandon-grotesque, sans-serif;padding:0 35px;padding-bottom:35px;}",
            ".title.jsx-3529671003{margin:0;padding:26px 0;text-transform:uppercase;font-size:12px;-webkit-letter-spacing:2px;-moz-letter-spacing:2px;-ms-letter-spacing:2px;letter-spacing:2px;}",
            "p.jsx-3529671003{color:#6e7b8c;margin:0;padding:0;margin-bottom:32px;font-family:adobe-garamond-pro, serif;font-size:18px;line-height:1.75;}",
            "@media screen and (min-width: 768px){.root.jsx-3529671003{padding:0 55px;padding-bottom:55px;margin-top:-20px;}.title.jsx-3529671003{padding-top:60px;padding-bottom:30px;}}",
            "@media screen and (min-width: 1024px){.root.jsx-3529671003{padding:0 75px;padding-bottom:75px;}}",
            "@media screen and (min-width: 1366px){.root.jsx-3529671003{padding:0 95px;padding-bottom:95px;}}",
          ],
          "styleId": "3529671003",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h4
            className="jsx-3529671003 title"
          >
            
          </h4>,
          <p
            className="jsx-3529671003"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>,
          <JSXStyle
            css={
              Array [
                ".root.jsx-3529671003{color:#415671;font-family:brandon-grotesque, sans-serif;padding:0 35px;padding-bottom:35px;}",
                ".title.jsx-3529671003{margin:0;padding:26px 0;text-transform:uppercase;font-size:12px;-webkit-letter-spacing:2px;-moz-letter-spacing:2px;-ms-letter-spacing:2px;letter-spacing:2px;}",
                "p.jsx-3529671003{color:#6e7b8c;margin:0;padding:0;margin-bottom:32px;font-family:adobe-garamond-pro, serif;font-size:18px;line-height:1.75;}",
                "@media screen and (min-width: 768px){.root.jsx-3529671003{padding:0 55px;padding-bottom:55px;margin-top:-20px;}.title.jsx-3529671003{padding-top:60px;padding-bottom:30px;}}",
                "@media screen and (min-width: 1024px){.root.jsx-3529671003{padding:0 75px;padding-bottom:75px;}}",
                "@media screen and (min-width: 1366px){.root.jsx-3529671003{padding:0 95px;padding-bottom:95px;}}",
              ]
            }
            styleId="3529671003"
          />,
        ],
        "className": "jsx-3529671003 root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
            "className": "jsx-3529671003 title",
          },
          "ref": null,
          "rendered": "",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
            "className": "jsx-3529671003",
          },
          "ref": null,
          "rendered": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".root.jsx-3529671003{color:#415671;font-family:brandon-grotesque, sans-serif;padding:0 35px;padding-bottom:35px;}",
              ".title.jsx-3529671003{margin:0;padding:26px 0;text-transform:uppercase;font-size:12px;-webkit-letter-spacing:2px;-moz-letter-spacing:2px;-ms-letter-spacing:2px;letter-spacing:2px;}",
              "p.jsx-3529671003{color:#6e7b8c;margin:0;padding:0;margin-bottom:32px;font-family:adobe-garamond-pro, serif;font-size:18px;line-height:1.75;}",
              "@media screen and (min-width: 768px){.root.jsx-3529671003{padding:0 55px;padding-bottom:55px;margin-top:-20px;}.title.jsx-3529671003{padding-top:60px;padding-bottom:30px;}}",
              "@media screen and (min-width: 1024px){.root.jsx-3529671003{padding:0 75px;padding-bottom:75px;}}",
              "@media screen and (min-width: 1366px){.root.jsx-3529671003{padding:0 95px;padding-bottom:95px;}}",
            ],
            "styleId": "3529671003",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`GuideTopics should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GuideTopics
    list={
      Array [
        Object {
          "iconURL": "https://vega.slooh.com/icons/home/observatory.png",
          "title": "Saturn",
        },
        Object {
          "iconURL": "https://vega.slooh.com/icons/home/jupiter-icon.png",
          "title": "Mars",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "breakpoints": Array [
        "screen and (min-width: 768px)",
        "screen and (min-width: 1024px)",
        "screen and (min-width: 1366px)",
      ],
      "children": Array [
        <ul
          className="jsx-1394131357"
        >
          <li
            className="jsx-1394131357 topic"
          >
            <LailaTile
              iconURL="https://vega.slooh.com/icons/home/observatory.png"
              title="Saturn"
            />
          </li>
          <li
            className="jsx-1394131357 topic"
          >
            <LailaTile
              iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
              title="Mars"
            />
          </li>
        </ul>,
        <JSXStyle
          css={
            Array [
              "ul.jsx-1394131357{margin:0 auto;padding:0;list-style-type:none;width:96%;}",
              ".topic.jsx-1394131357{margin-bottom:10px;}",
              "@media screen and (min-width: 768px){ul.jsx-1394131357{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;}}",
            ]
          }
          styleId="1394131357"
        />,
      ],
      "theme": Object {},
      "widths": Array [
        "620px",
        "940px",
        "940px",
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="jsx-1394131357 topic"
            >
              <LailaTile
                iconURL="https://vega.slooh.com/icons/home/observatory.png"
                title="Saturn"
              />
            </li>,
            <li
              className="jsx-1394131357 topic"
            >
              <LailaTile
                iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
                title="Mars"
              />
            </li>,
          ],
          "className": "jsx-1394131357",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "https://vega.slooh.com/icons/home/observatory.png-Saturn",
            "nodeType": "host",
            "props": Object {
              "children": <LailaTile
                iconURL="https://vega.slooh.com/icons/home/observatory.png"
                title="Saturn"
              />,
              "className": "jsx-1394131357 topic",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconURL": "https://vega.slooh.com/icons/home/observatory.png",
                "title": "Saturn",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "https://vega.slooh.com/icons/home/jupiter-icon.png-Mars",
            "nodeType": "host",
            "props": Object {
              "children": <LailaTile
                iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
                title="Mars"
              />,
              "className": "jsx-1394131357 topic",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "iconURL": "https://vega.slooh.com/icons/home/jupiter-icon.png",
                "title": "Mars",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "li",
          },
        ],
        "type": "ul",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            "ul.jsx-1394131357{margin:0 auto;padding:0;list-style-type:none;width:96%;}",
            ".topic.jsx-1394131357{margin-bottom:10px;}",
            "@media screen and (min-width: 768px){ul.jsx-1394131357{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;}}",
          ],
          "styleId": "1394131357",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "breakpoints": Array [
          "screen and (min-width: 768px)",
          "screen and (min-width: 1024px)",
          "screen and (min-width: 1366px)",
        ],
        "children": Array [
          <ul
            className="jsx-1394131357"
          >
            <li
              className="jsx-1394131357 topic"
            >
              <LailaTile
                iconURL="https://vega.slooh.com/icons/home/observatory.png"
                title="Saturn"
              />
            </li>
            <li
              className="jsx-1394131357 topic"
            >
              <LailaTile
                iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
                title="Mars"
              />
            </li>
          </ul>,
          <JSXStyle
            css={
              Array [
                "ul.jsx-1394131357{margin:0 auto;padding:0;list-style-type:none;width:96%;}",
                ".topic.jsx-1394131357{margin-bottom:10px;}",
                "@media screen and (min-width: 768px){ul.jsx-1394131357{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;}}",
              ]
            }
            styleId="1394131357"
          />,
        ],
        "theme": Object {},
        "widths": Array [
          "620px",
          "940px",
          "940px",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="jsx-1394131357 topic"
              >
                <LailaTile
                  iconURL="https://vega.slooh.com/icons/home/observatory.png"
                  title="Saturn"
                />
              </li>,
              <li
                className="jsx-1394131357 topic"
              >
                <LailaTile
                  iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
                  title="Mars"
                />
              </li>,
            ],
            "className": "jsx-1394131357",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "https://vega.slooh.com/icons/home/observatory.png-Saturn",
              "nodeType": "host",
              "props": Object {
                "children": <LailaTile
                  iconURL="https://vega.slooh.com/icons/home/observatory.png"
                  title="Saturn"
                />,
                "className": "jsx-1394131357 topic",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconURL": "https://vega.slooh.com/icons/home/observatory.png",
                  "title": "Saturn",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "https://vega.slooh.com/icons/home/jupiter-icon.png-Mars",
              "nodeType": "host",
              "props": Object {
                "children": <LailaTile
                  iconURL="https://vega.slooh.com/icons/home/jupiter-icon.png"
                  title="Mars"
                />,
                "className": "jsx-1394131357 topic",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconURL": "https://vega.slooh.com/icons/home/jupiter-icon.png",
                  "title": "Mars",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              "ul.jsx-1394131357{margin:0 auto;padding:0;list-style-type:none;width:96%;}",
              ".topic.jsx-1394131357{margin-bottom:10px;}",
              "@media screen and (min-width: 768px){ul.jsx-1394131357{width:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;}}",
            ],
            "styleId": "1394131357",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SubjectGuideList should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SubjectGuideList
    list={
      Array [
        Object {
          "anchorText": "Bar",
          "link": "#",
          "title": "Foo",
        },
        Object {
          "anchorText": "Bar",
          "link": "#",
          "title": "Foo",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <li
            className="jsx-2486111897"
          >
            <LeighTile
              anchorText="Bar"
              link="#"
              title="Foo"
            />
          </li>,
          <li
            className="jsx-2486111897"
          >
            <LeighTile
              anchorText="Bar"
              link="#"
              title="Foo"
            />
          </li>,
        ],
        <JSXStyle
          css={
            Array [
              "ul.jsx-2486111897{margin:0;padding:0;list-style-type:none;}",
              "li.jsx-2486111897{margin-bottom:20px;}",
            ]
          }
          styleId="2486111897"
        />,
      ],
      "className": "jsx-2486111897",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "leigh-tile-Foo",
        "nodeType": "host",
        "props": Object {
          "children": <LeighTile
            anchorText="Bar"
            link="#"
            title="Foo"
          />,
          "className": "jsx-2486111897",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "anchorText": "Bar",
            "link": "#",
            "title": "Foo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "leigh-tile-Foo",
        "nodeType": "host",
        "props": Object {
          "children": <LeighTile
            anchorText="Bar"
            link="#"
            title="Foo"
          />,
          "className": "jsx-2486111897",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "anchorText": "Bar",
            "link": "#",
            "title": "Foo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "li",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            "ul.jsx-2486111897{margin:0;padding:0;list-style-type:none;}",
            "li.jsx-2486111897{margin-bottom:20px;}",
          ],
          "styleId": "2486111897",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <li
              className="jsx-2486111897"
            >
              <LeighTile
                anchorText="Bar"
                link="#"
                title="Foo"
              />
            </li>,
            <li
              className="jsx-2486111897"
            >
              <LeighTile
                anchorText="Bar"
                link="#"
                title="Foo"
              />
            </li>,
          ],
          <JSXStyle
            css={
              Array [
                "ul.jsx-2486111897{margin:0;padding:0;list-style-type:none;}",
                "li.jsx-2486111897{margin-bottom:20px;}",
              ]
            }
            styleId="2486111897"
          />,
        ],
        "className": "jsx-2486111897",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "leigh-tile-Foo",
          "nodeType": "host",
          "props": Object {
            "children": <LeighTile
              anchorText="Bar"
              link="#"
              title="Foo"
            />,
            "className": "jsx-2486111897",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "anchorText": "Bar",
              "link": "#",
              "title": "Foo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "leigh-tile-Foo",
          "nodeType": "host",
          "props": Object {
            "children": <LeighTile
              anchorText="Bar"
              link="#"
              title="Foo"
            />,
            "className": "jsx-2486111897",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "anchorText": "Bar",
              "link": "#",
              "title": "Foo",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              "ul.jsx-2486111897{margin:0;padding:0;list-style-type:none;}",
              "li.jsx-2486111897{margin-bottom:20px;}",
            ],
            "styleId": "2486111897",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TopicBodyContent should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopicBodyContent
    content="Some sample content"
    title="Test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="jsx-3931563762 title-wrapper"
        >
          <RubyTitle
            text="Test"
          />
        </div>,
        <p
          className="jsx-3931563762"
        >
          Some sample content
        </p>,
        <JSXStyle
          css={
            Array [
              ".root.jsx-3931563762{background-color:white;padding:20px 35px;}",
              ".title-wrapper.jsx-3931563762{padding:15px 0;}",
              "p.jsx-3931563762{font-family:adobe-garamond-pro, serif;line-height:1.5;font-size:18px;}",
              "@media screen and (min-width: 768px){.root.jsx-3931563762{padding:60px 40px;}}",
            ]
          }
          styleId="3931563762"
        />,
      ],
      "className": "jsx-3931563762 root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <RubyTitle
            text="Test"
          />,
          "className": "jsx-3931563762 title-wrapper",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "text": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Some sample content",
          "className": "jsx-3931563762",
        },
        "ref": null,
        "rendered": "Some sample content",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".root.jsx-3931563762{background-color:white;padding:20px 35px;}",
            ".title-wrapper.jsx-3931563762{padding:15px 0;}",
            "p.jsx-3931563762{font-family:adobe-garamond-pro, serif;line-height:1.5;font-size:18px;}",
            "@media screen and (min-width: 768px){.root.jsx-3931563762{padding:60px 40px;}}",
          ],
          "styleId": "3931563762",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="jsx-3931563762 title-wrapper"
          >
            <RubyTitle
              text="Test"
            />
          </div>,
          <p
            className="jsx-3931563762"
          >
            Some sample content
          </p>,
          <JSXStyle
            css={
              Array [
                ".root.jsx-3931563762{background-color:white;padding:20px 35px;}",
                ".title-wrapper.jsx-3931563762{padding:15px 0;}",
                "p.jsx-3931563762{font-family:adobe-garamond-pro, serif;line-height:1.5;font-size:18px;}",
                "@media screen and (min-width: 768px){.root.jsx-3931563762{padding:60px 40px;}}",
              ]
            }
            styleId="3931563762"
          />,
        ],
        "className": "jsx-3931563762 root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <RubyTitle
              text="Test"
            />,
            "className": "jsx-3931563762 title-wrapper",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Test",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Some sample content",
            "className": "jsx-3931563762",
          },
          "ref": null,
          "rendered": "Some sample content",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".root.jsx-3931563762{background-color:white;padding:20px 35px;}",
              ".title-wrapper.jsx-3931563762{padding:15px 0;}",
              "p.jsx-3931563762{font-family:adobe-garamond-pro, serif;line-height:1.5;font-size:18px;}",
              "@media screen and (min-width: 768px){.root.jsx-3931563762{padding:60px 40px;}}",
            ],
            "styleId": "3931563762",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TopicContent should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopicContent />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <CenterColumn
          breakpoints={
            Array [
              "screen and (min-width: 768px)",
              "screen and (min-width: 1024px)",
              "screen and (min-width: 1366px)",
            ]
          }
          theme={Object {}}
          widths={
            Array [
              "620px",
              "780px",
              "940px",
            ]
          }
        >
          <div
            className="jsx-2900280927 title-container"
          >
            <TopicHeading
              text="Astronomical time"
            />
          </div>
        </CenterColumn>,
        <CenterColumn
          breakpoints={
            Array [
              "screen and (min-width: 768px)",
              "screen and (min-width: 1024px)",
              "screen and (min-width: 1366px)",
            ]
          }
          theme={Object {}}
          widths={
            Array [
              "620px",
              "780px",
              "940px",
            ]
          }
        >
          <div
            className="jsx-2900280927 guide-container"
          >
            <GuideSection
              alignContent="left"
              column={[Function]}
              content={[Function]}
            />
          </div>
        </CenterColumn>,
        <JSXStyle
          css={
            Array [
              ".root.jsx-2900280927{background:url(https://vega.slooh.com/assets/v4/common/White_Paper_Subtle.png);}",
              ".guide-container.jsx-2900280927{background:white;}",
              ".title-container.jsx-2900280927{margin:0;background:white;}",
              "@media screen and (min-width: 768px){.title-container.jsx-2900280927{background:none;}.guide-container.jsx-2900280927{margin:0;margin-top:10px;}}",
              "@media screen and (min-width: 1024px){.guide-container.jsx-2900280927{background:none;}}",
            ]
          }
          styleId="2900280927"
        />,
      ],
      "className": "jsx-2900280927 root",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "breakpoints": Array [
            "screen and (min-width: 768px)",
            "screen and (min-width: 1024px)",
            "screen and (min-width: 1366px)",
          ],
          "children": <div
            className="jsx-2900280927 title-container"
          >
            <TopicHeading
              text="Astronomical time"
            />
          </div>,
          "theme": Object {},
          "widths": Array [
            "620px",
            "780px",
            "940px",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <TopicHeading
              text="Astronomical time"
            />,
            "className": "jsx-2900280927 title-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "text": "Astronomical time",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "breakpoints": Array [
            "screen and (min-width: 768px)",
            "screen and (min-width: 1024px)",
            "screen and (min-width: 1366px)",
          ],
          "children": <div
            className="jsx-2900280927 guide-container"
          >
            <GuideSection
              alignContent="left"
              column={[Function]}
              content={[Function]}
            />
          </div>,
          "theme": Object {},
          "widths": Array [
            "620px",
            "780px",
            "940px",
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <GuideSection
              alignContent="left"
              column={[Function]}
              content={[Function]}
            />,
            "className": "jsx-2900280927 guide-container",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "alignContent": "left",
              "column": [Function],
              "content": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            ".root.jsx-2900280927{background:url(https://vega.slooh.com/assets/v4/common/White_Paper_Subtle.png);}",
            ".guide-container.jsx-2900280927{background:white;}",
            ".title-container.jsx-2900280927{margin:0;background:white;}",
            "@media screen and (min-width: 768px){.title-container.jsx-2900280927{background:none;}.guide-container.jsx-2900280927{margin:0;margin-top:10px;}}",
            "@media screen and (min-width: 1024px){.guide-container.jsx-2900280927{background:none;}}",
          ],
          "styleId": "2900280927",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <CenterColumn
            breakpoints={
              Array [
                "screen and (min-width: 768px)",
                "screen and (min-width: 1024px)",
                "screen and (min-width: 1366px)",
              ]
            }
            theme={Object {}}
            widths={
              Array [
                "620px",
                "780px",
                "940px",
              ]
            }
          >
            <div
              className="jsx-2900280927 title-container"
            >
              <TopicHeading
                text="Astronomical time"
              />
            </div>
          </CenterColumn>,
          <CenterColumn
            breakpoints={
              Array [
                "screen and (min-width: 768px)",
                "screen and (min-width: 1024px)",
                "screen and (min-width: 1366px)",
              ]
            }
            theme={Object {}}
            widths={
              Array [
                "620px",
                "780px",
                "940px",
              ]
            }
          >
            <div
              className="jsx-2900280927 guide-container"
            >
              <GuideSection
                alignContent="left"
                column={[Function]}
                content={[Function]}
              />
            </div>
          </CenterColumn>,
          <JSXStyle
            css={
              Array [
                ".root.jsx-2900280927{background:url(https://vega.slooh.com/assets/v4/common/White_Paper_Subtle.png);}",
                ".guide-container.jsx-2900280927{background:white;}",
                ".title-container.jsx-2900280927{margin:0;background:white;}",
                "@media screen and (min-width: 768px){.title-container.jsx-2900280927{background:none;}.guide-container.jsx-2900280927{margin:0;margin-top:10px;}}",
                "@media screen and (min-width: 1024px){.guide-container.jsx-2900280927{background:none;}}",
              ]
            }
            styleId="2900280927"
          />,
        ],
        "className": "jsx-2900280927 root",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "breakpoints": Array [
              "screen and (min-width: 768px)",
              "screen and (min-width: 1024px)",
              "screen and (min-width: 1366px)",
            ],
            "children": <div
              className="jsx-2900280927 title-container"
            >
              <TopicHeading
                text="Astronomical time"
              />
            </div>,
            "theme": Object {},
            "widths": Array [
              "620px",
              "780px",
              "940px",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <TopicHeading
                text="Astronomical time"
              />,
              "className": "jsx-2900280927 title-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "text": "Astronomical time",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "breakpoints": Array [
              "screen and (min-width: 768px)",
              "screen and (min-width: 1024px)",
              "screen and (min-width: 1366px)",
            ],
            "children": <div
              className="jsx-2900280927 guide-container"
            >
              <GuideSection
                alignContent="left"
                column={[Function]}
                content={[Function]}
              />
            </div>,
            "theme": Object {},
            "widths": Array [
              "620px",
              "780px",
              "940px",
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <GuideSection
                alignContent="left"
                column={[Function]}
                content={[Function]}
              />,
              "className": "jsx-2900280927 guide-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "alignContent": "left",
                "column": [Function],
                "content": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              ".root.jsx-2900280927{background:url(https://vega.slooh.com/assets/v4/common/White_Paper_Subtle.png);}",
              ".guide-container.jsx-2900280927{background:white;}",
              ".title-container.jsx-2900280927{margin:0;background:white;}",
              "@media screen and (min-width: 768px){.title-container.jsx-2900280927{background:none;}.guide-container.jsx-2900280927{margin:0;margin-top:10px;}}",
              "@media screen and (min-width: 1024px){.guide-container.jsx-2900280927{background:none;}}",
            ],
            "styleId": "2900280927",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TopicHeading should render correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TopicHeading
    text="Foo"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <h2
          className="jsx-2857738782"
        >
          Foo
        </h2>,
        <JSXStyle
          css={
            Array [
              "h2.jsx-2857738782{font-family:adobe-garamond-pro, serif;color:#415671;font-size:22px;border-bottom:1px solid #d9dee5;margin:0 35px;padding-top:40px;padding-bottom:20px;text-transform:capitalize;}",
              "@media screen and (min-width: 768px){h2.jsx-2857738782{font-size:32px;border-bottom:4px solid #415671;margin:0;}}",
              "@media screen and (min-width: 1024px){h2.jsx-2857738782{font-size:38px;}}",
            ]
          }
          styleId="2857738782"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Foo",
          "className": "jsx-2857738782",
        },
        "ref": null,
        "rendered": "Foo",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "css": Array [
            "h2.jsx-2857738782{font-family:adobe-garamond-pro, serif;color:#415671;font-size:22px;border-bottom:1px solid #d9dee5;margin:0 35px;padding-top:40px;padding-bottom:20px;text-transform:capitalize;}",
            "@media screen and (min-width: 768px){h2.jsx-2857738782{font-size:32px;border-bottom:4px solid #415671;margin:0;}}",
            "@media screen and (min-width: 1024px){h2.jsx-2857738782{font-size:38px;}}",
          ],
          "styleId": "2857738782",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <h2
            className="jsx-2857738782"
          >
            Foo
          </h2>,
          <JSXStyle
            css={
              Array [
                "h2.jsx-2857738782{font-family:adobe-garamond-pro, serif;color:#415671;font-size:22px;border-bottom:1px solid #d9dee5;margin:0 35px;padding-top:40px;padding-bottom:20px;text-transform:capitalize;}",
                "@media screen and (min-width: 768px){h2.jsx-2857738782{font-size:32px;border-bottom:4px solid #415671;margin:0;}}",
                "@media screen and (min-width: 1024px){h2.jsx-2857738782{font-size:38px;}}",
              ]
            }
            styleId="2857738782"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Foo",
            "className": "jsx-2857738782",
          },
          "ref": null,
          "rendered": "Foo",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "css": Array [
              "h2.jsx-2857738782{font-family:adobe-garamond-pro, serif;color:#415671;font-size:22px;border-bottom:1px solid #d9dee5;margin:0 35px;padding-top:40px;padding-bottom:20px;text-transform:capitalize;}",
              "@media screen and (min-width: 768px){h2.jsx-2857738782{font-size:32px;border-bottom:4px solid #415671;margin:0;}}",
              "@media screen and (min-width: 1024px){h2.jsx-2857738782{font-size:38px;}}",
            ],
            "styleId": "2857738782",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
